# spot

./: .gitignore  Api.hs  App.hs  Config.hs  DB.hs  Helper.hs  LICENSE  Main.hs  Migrate.hs  Option.hs  README.md  TODO.md  Types.hs  db.hs  main.hs  migrate.hs  spot.cabal
Spec/: Api.hs  App.hs  Helper.hs  Spec.hs  SpecHelper.hs  Spot.hs
coffee/: init.coffee  models.coffee  namespace.coffee  utils.coffee  views.coffee
src/: App.hs  Config.hs  DB.hs  Helper.hs  Main.hs  Migrate.hs
static/: app.js.js  init.js  models.js  namespace.js  utils.js  views.js
test/: ApiSpec.hs  AppSpec.hs  Spec.hs  SpecHelper.hs
views/: home.mustache
