Name:                   spot
Version:                0.0.0
Author:                 Fujimura Daisuke
Maintainer:             Fujimura Daisuke
-- FIXME
License:                BSD3
License-File:           LICENSE
Synopsis:               Web API for DB
Description:            Web API for DB
Category:               Web
Cabal-Version:          >= 1.6
Build-Type:             Simple
Data-Files:             coffee/init.coffee
                        coffee/models.coffee
                        coffee/namespace.coffee
                        coffee/utils.coffee
                        coffee/views.coffee
                        views/home.mustache
Executable spot
  Main-Is:              Main.hs
  GHC-Options:          -Wall
  Build-Depends:        base >= 4.0 && < 5
                      , cmdargs
                      , hastache
                      , mtl
                      , persistent
                      , persistent-sqlite
                      , persistent-template
                      , scotty
                      , text
                      , unordered-containers
                      , wai-extra
                      , wai-middleware-static
                      , yaml
  Other-Modules:        App
                        DB
                        Migrate
                        Option
test-suite specs
  type:                exitcode-stdio-1.0
  main-is:             Spec/Spec.hs
  build-depends:       base                == 4.5.*
                     , wai-test
                     , hspec               == 1.3.*

Source-Repository head
  Type:                 git
  Location:             git://github.com/fujimura/spot.git
