Name:                   spot
Version:                0.0.0
Author:                 Fujimura Daisuke
Maintainer:             Fujimura Daisuke
-- FIXME
License:                BSD3
License-File:           LICENSE
Synopsis:               Web API for DB
Description:            Web API for DB
Category:               Web
Cabal-Version:          >= 1.6
Build-Type:             Simple
Data-Files:             coffee/init.coffee
                        coffee/models.coffee
                        coffee/namespace.coffee
                        coffee/utils.coffee
                        coffee/views.coffee
                        views/home.mustache
Executable spot
  Main-Is:              Main.hs
  GHC-Options:          -Wall
  hs-source-dirs:       src
  Build-Depends:        base >= 4.0 && < 5
                      , aeson
                      , bytestring
                      , cmdargs
                      , ghc-prim
                      , hastache
                      , http-types
                      , mtl
                      , network
                      , path-pieces
                      , persistent == 1.0.*
                      , persistent-sqlite
                      , persistent-template == 1.0.*
                      , scotty >= 0.4.5
                      , text
                      , unordered-containers
                      , utf8-string
                      , wai
                      , wai-extra
                      , wai-middleware-static
                      , yaml
  Other-Modules:        App
                        Helper
                        DB
                        Migrate
                        Option
test-suite specs
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      src
                     , test
  Build-depends:       base >= 4.0 && < 5
                     , conduit             >= 0.5.2.4
                     , wai-test
                     , hspec               == 1.3.*

Source-Repository head
  Type:                 git
  Location:             git://github.com/fujimura/spot.git
